Prep update gradle